[package]
name = "mrGateway"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4.1"
actix-cors = "0.6.5"
prost = "0.12.3"
tonic = "0.10.2"
tokio = { version = "1.35.1", features = ["full"] }

[build-dependencies]
reqwest = { version = "0.11.23", features = ["blocking"] }
tonic-build = "0.10.2"